--- a/README
+++ b/README
@@ -1,30 +1,30 @@
-xsdPatrol
+# xsdPatrol
 Next generation of software to support SCS Patrol. 
 
-Goals
+### Goals
 * FOSS with repository on Github
 * Run software on Windows, Linux, and macOS
 * Store data in MS Access, SQLite, or MariaDB
 * Customizable through SQL tables and config files
 
-Ticket Tracking Module
+## Ticket Tracking Module
 Automated Ongoing Event Reports using data from DispatchDB.
 
 New tables go in PatrolDB:
 * The Tickets table itself
 * Source numbers to console names mapping
 
-Time Reporting Module
+## Time Reporting Module
 Write a Python program to assist the Patrol Timekeepers. 
 
-Minimal Requirements
+### Minimal Requirements
 Give the timekeepers something better than paging through the log book. 
 * Read the previous week's dispatch logs. 
 * Collect the names of each person who worked and provide a sum of hours. 
 * Create a simple report that can be printed or emailed. A window that allows text to be copied is good enough. Look at wx.ListCtrl and wx.dataview.DataViewCtrl.
 * Run from an icon on the desktop. 
 
-Additions
+### Additions
 * Sanity check hours
     * Calculate expected hours for each shift
     * Print exceptions when they don't match
